<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_theme_background_light"
        tools:context=".view.activity.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_headertxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.89" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />


        <ImageView
            android:id="@+id/crm_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_crm_logo"
            app:layout_constraintBottom_toTopOf="@id/guideline_headertxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_input_background"
            android:elevation="12dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:weightSum="5.5"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/guideline_headertxt"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:paddingBottom="5dp"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/raleway_light"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/SignUp"
                android:textColor="@color/foreground_colour"
                android:textSize="@dimen/DefaultTextSize" />

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.7"
                android:background="@drawable/ic_input_field_background"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/UserName"
                android:paddingLeft="20dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.7"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_input_field_background"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/Email"
                android:paddingLeft="20dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.7"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_input_field_background"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/Phone"
                android:paddingLeft="20dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.7"
                android:background="@drawable/ic_input_field_background"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.7"
                android:background="@drawable/ic_input_field_background"
                android:elevation="0dp"
                android:fontFamily="@font/raleway_light"
                android:text="@string/SignUp"
                android:textAllCaps="false"
                android:textColor="@color/button_text_colour"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="0.6"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_member"
                    android:textColor="@color/foreground_colour" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/SignIn"
                    android:textAllCaps="false"
                    android:textColor="@color/foreground_colour"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>