<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_theme_background_light"
    tools:context=".view.activity.LocationPermission">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/backgorundimage"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:alpha="0.50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/locationicon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/locationicon"
        android:scaleType="fitXY"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/access_location_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:text="@string/access_location"
        android:textColor="@color/white"
        android:textSize="@dimen/DefaultTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationicon" />

    <TextView
        android:id="@+id/access_location_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:text="@string/car_wash_app_requires_access_to_your_location"
        android:textSize="@dimen/DefaultTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_location_head" />

    <Button
        android:id="@+id/turnOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="0.8"
        android:background="@drawable/ic_input_background"
        android:elevation="0dp"
        android:fontFamily="@font/raleway_light"
        android:text="@string/turn_on_location_service"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_location_description"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>