<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:alpha="0.50"
            android:scaleType="fitXY"
            android:src="@drawable/backgorundimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_light"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:text="@string/car_selected"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carSelectedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/raleway_light"
            android:hint="@string/UserName"
            android:padding="15dp"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:text="BMW"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carSelected" />

        <TextView
            android:id="@+id/DateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_light"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:text="Date And Time"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carSelectedValue" />

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/raleway_light"
            android:hint="@string/UserName"
            android:padding="15dp"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:text="20 June,2020"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DateView" />

        <TextView
            android:id="@+id/services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_light"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:text="Services Selected"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTime" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/service_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:divider="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/services"
            tools:listitem="@layout/rowitem_service" />

        <TextView
            android:id="@+id/totalAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_light"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:text="Amount Payable"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_bottom" />

        <TextView
            android:id="@+id/totalAmountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/raleway_light"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:text="130$"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_bottom" />
        <Button
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/ic_input_field_background"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/raleway_light"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/button_text_colour"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>