<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:alpha="0.50"
            android:scaleType="fitXY"
            android:src="@drawable/backgorundimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/car_recyclerview"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:divider="@android:color/transparent"
            android:transcriptMode="alwaysScroll"
            app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:stackFromEnd="true"
            tools:listitem="@layout/rowitem_car"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/service_recyclerview"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:divider="@android:color/transparent"
            android:transcriptMode="alwaysScroll"
            app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:stackFromEnd="true"
            tools:listitem="@layout/rowitem_service" />

        <RelativeLayout
            android:id="@+id/bottom_sheet_layout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_input_field_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selection_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/save_selection">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <RelativeLayout
                    android:id="@+id/item_car_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:id="@+id/item_car"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="5dp"
                        android:background="@drawable/item_layout_unselected_background">

                        <ImageView
                            android:id="@+id/image_car"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:adjustViewBounds="true"
                            android:alpha="0.50"
                            android:scaleType="center"
                            android:src="@drawable/car_wash_unselected" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/item_car"
                        android:text="@string/select_car"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_service_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline_center">

                    <RelativeLayout
                        android:id="@+id/item_service"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="5dp"
                        android:background="@drawable/item_layout_unselected_background">

                        <ImageView
                            android:id="@+id/image_service"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:adjustViewBounds="true"
                            android:alpha="0.50"
                            android:scaleType="center"
                            android:src="@drawable/serviceunselected" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/item_service"
                        android:text="@string/select_service"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/save_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:background="@drawable/buttonbackgorund"
                android:text="@string/confirm_booking" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>